; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/core/extr_mad.c_deref_mad_agent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/core/extr_mad.c_deref_mad_agent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_mad_agent_private = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ib_mad_agent_private*)* @deref_mad_agent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @deref_mad_agent(%struct.ib_mad_agent_private* %0) #0 {
  %2 = alloca %struct.ib_mad_agent_private*, align 8
  store %struct.ib_mad_agent_private* %0, %struct.ib_mad_agent_private** %2, align 8
  %3 = load %struct.ib_mad_agent_private*, %struct.ib_mad_agent_private** %2, align 8
  %4 = getelementptr inbounds %struct.ib_mad_agent_private, %struct.ib_mad_agent_private* %3, i32 0, i32 1
  %5 = call i64 @atomic_dec_and_test(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.ib_mad_agent_private*, %struct.ib_mad_agent_private** %2, align 8
  %9 = getelementptr inbounds %struct.ib_mad_agent_private, %struct.ib_mad_agent_private* %8, i32 0, i32 0
  %10 = call i32 @complete(i32* %9)
  br label %11

11:                                               ; preds = %7, %1
  ret void
}

declare dso_local i64 @atomic_dec_and_test(i32*) #1

declare dso_local i32 @complete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
